fix: mobile menu formatting on iOS. Resolves issue #2

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -404,23 +404,6 @@ body {
   font-family: "Amiri", serif;
   margin: 0;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  -webkit-box-pack: normal;
-          justify-content: normal;
-  -webkit-justify-content: normal;
-  -moz-justify-content: normal;
-  -ms-flex-pack: normal;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
 }
 
 body a {
@@ -458,6 +441,20 @@ body.not-index .page-title {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  -webkit-box-pack: normal;
+          justify-content: normal;
+  -webkit-justify-content: normal;
+  -moz-justify-content: normal;
+  -ms-flex-pack: normal;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   max-width: 1280px;
   width: 100%;
   position: relative;
@@ -490,6 +487,7 @@ body.not-index .page-title {
   top: 140px;
   background-color: #F7ECE5;
   z-index: 99;
+  right: 0;
   display: none;
 }
 
@@ -533,7 +531,6 @@ body.not-index .page-title {
     -ms-flex-pack: normal;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
-    position: relative;
     top: 0;
   }
 }
